fix margins and spacing on effects symbols

--- a/src/style/effects.css
+++ b/src/style/effects.css
@@ -1,3 +1,7 @@
 #effects {
     flex-wrap: wrap;
 }
+
+#effects .imgContainer {
+    margin: 5px;
+}
